--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 	<title>title yep</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
 	<h1><a href="/random.html">header one</a></h1>
