--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Static Page</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="./random.html">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
