path parsing in http request, added thepot status check

--- a/var/error/418.html
+++ b/var/error/418.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>418</h1>
-        <p>I'm a Teapot</p>
+        <p>I'm a Teapot, I can't brew coffee.</p>
     </body>
 </html>
