--- a/www/index.html
+++ b/www/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Static Page</title>
+    <title>Request Rangers</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Static Page</h1>
+        <h1>Welcome to the House of Request Rangers</h1>
         <nav>
             <ul>
                 <li><a href="./random.html">Home</a></li>
