--- a/www/postMethod.html
+++ b/www/postMethod.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Post</title>
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="./styles.css">
+    <title>Post</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-	<h1>Please upload file</h1>
-	<form id="uploadForm" method="post" enctype="multipart/form-data">
-		<input type="file" id="fileInput" name="file" required>
-		<button type="submit">Upload</button>
-	</form>
+    <h1>Please upload file</h1>
+    <form method="post" enctype="multipart/form-data">
+        <input type="file" id="fileInput" name="file" required>
+        <input type="hidden" name="cgi_path" value="/path/to/your/cgi/script.cgi">
+        <button type="submit">Upload</button>
+    </form>
 </body>
 </html>
