post get and delete works fine

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
         </section>
         <section>
             <h2>Test CGI execution</h2>
-            <a href="./execCGI.html">Get to CGI file</a>
+            <a href="../var/cgi-bin/get_time.cgi">Get to CGI file</a>
         </section>
         <section>
             <h2>Test autoindex ON</h2>
