need to clean post

--- a/www/postMethod.html
+++ b/www/postMethod.html
@@ -9,7 +9,7 @@
     <h1>Please upload file</h1>
     <form method="post" enctype="multipart/form-data">
         <input type="file" id="fileInput" name="file" required>
-        <input type="hidden" name="cgi_upload" value="var/cgi-bin/upload_file_in_a_folder.cgi">
+        <input type="hidden" name="cgi_upload" value="upload_file_in_a_folder.cgi">
         <button type="submit">Upload</button>
     </form>
 </body>
