--- a/www/postMethod.html
+++ b/www/postMethod.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Please upload file</h1>
-    <form method="post" enctype="multipart/form-data">
+    <form action="/storage/" method="post" enctype="multipart/form-data">
         <input type="file" id="fileInput" name="file" required>
         <button type="submit">Upload</button>
     </form>
