--- a/www/postMethodCGI.html
+++ b/www/postMethodCGI.html
@@ -10,7 +10,7 @@
     <!-- The form's action points to the CGI script URL -->
     <form method="post" enctype="multipart/form-data">
         <label for="fileInput">Choose file:</label>
-        <input type="file" name="/www/random/other.txt" required>
+        <input type="file" id="fileInput" name="file" required>
         <button type="submit">Upload</button>
     </form>
 </body>
