--- a/www/storage/index.html
+++ b/www/storage/index.html
@@ -40,7 +40,7 @@ Content-Type: text/html
         <section>
             <h2>Test Post with cgi</h2>
             <form action="../cgi-bin/uploadFile.cgi" method="post" enctype="multipart/form-data">
-                <input type="file" id="fileInput" name="postExample" required>
+                <input type="file" id="fileInput" filename="postExample" required>
                 <button type="submit">Upload</button>
             </form>
         </section>
