changed file to postBody in html and parser, to extract the body for a post request

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the House of Request Rangers</h1>
+        <h1>Welcome to all the House of Request Rangers</h1>
         <nav>
             <ul>
                 <li><a href="https://cdn.intra.42.fr/pdf/pdf/140717/en.subject.pdf">Subject</a></li>
@@ -32,7 +32,7 @@
         <section>
             <h2>Test Post with cgi</h2>
             <form action="../cgi-bin/uploadFile.cgi" method="post" enctype="multipart/form-data">
-                <input type="file" id="fileInput" filename="whatwever" required>
+                <input type="file" id="fileInput" name="postBody" required>
                 <button type="submit">Upload</button>
             </form>
         </section>
