fixed small errors for post

--- a/www/postMethod.html
+++ b/www/postMethod.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Please upload file</h1>
-    <form action="storage" method="post" enctype="multipart/form-data">
-        <input type="file" id="fileInput" name="file" required>
+    <form action="storage/" method="post" enctype="multipart/form-data">
+        <input type="file" id="fileInput" name="postBody" required>
         <button type="submit">Upload</button>
     </form>
 </body>
