--- a/www/index.html
+++ b/www/index.html
@@ -36,16 +36,12 @@
                 <button type="submit">Upload</button>
             </form>
         </section>
-        <section>
-            <h2>Contact</h2>
-            <p>Please address every question to <a href="https://profile.intra.42.fr/users/kkroon">Phd Kevin</a></p>
-        </section>
     </main>
     <footer>
         <p>Made by </p>
-        <a href="https://profile.intra.42.fr/users/kkroon">Phd Kevin</a>
-        <a href="https://profile.intra.42.fr/users/ibehluli">Phd Isly</a>
-        <a href="https://profile.intra.42.fr/users/jvorstma">Phd Jan Gijs</a>
+        <a href="https://profile.intra.42.fr/users/kkroon">Kevin</a>
+        <a href="https://profile.intra.42.fr/users/ibehluli">Isly</a>
+        <a href="https://profile.intra.42.fr/users/jvorstma">Jan Gijs</a>
     </footer>
 </body>
 </html>
