--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
         <section>
             <h2>Test Post with cgi</h2>
             <form action="../cgi-bin/uploadFile.cgi" method="post" enctype="multipart/form-data">
-                <input type="file" id="fileInput" name="postBody" required>
+                <input type="file" id="fileInput" name="file" required>
                 <button type="submit">Upload</button>
             </form>
         </section>
