--- a/www/postMethod.html
+++ b/www/postMethod.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Post</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
