inf loop for cgi fixed, timeout 504 and clean exit from cgi

--- a/www/index.html
+++ b/www/index.html
@@ -19,15 +19,11 @@
     <main>
         <section>
             <h2>Test POST method</h2>
-            <a href="./postMethod.html">Get to Post method</a>
-        </section>
-        <section>
-            <h2>Test DELETE method</h2>
-            <a href="./deleteFile.html">Get To Delete method</a>
+            <a href="/otherwww/postMethod.html">Get to Post method</a>
         </section>
         <section>
             <h2>Test CGI execution</h2>
-            <a href="../cgi-bin/get_time.cgi">Get to CGI file</a>
+            <a href="/cgi-bin/get_time.cgi">Get to CGI file</a>
         </section>
         <section>
             <h2>Test Post with cgi</h2>
